# monitor-input-rs

./: .gitignore  Cargo.toml  README.md  Taskfile.yml
.github/: dependabot.yml
.github/workflows/: rust-ci.yml  rust-publish.yml  rust.yml
hooks/: precommit.sh
src/: cli.rs  input_source.rs  lib.rs  main.rs  main_winapp.rs  monitor.rs
