[package]
name = "monitor-input"
version = "1.0.0"
edition = "2024"
authors = ["Koji Ishii <kojiishi@gmail.com>"]
description = "A command line tool to change input sources of display monitors with DDC/CI."
keywords = ["ddc", "mccs", "vcp", "vesa"]
repository = "https://github.com/kojiishi/monitor-input-rs"
documentation = "http://docs.rs/monitor-input"
readme = "README.md"
license = "Apache-2.0"
exclude = [".github", ".gitignore"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
ddc-hi = "0.4.1"
log = "0.4.26"
mccs-db = "0.1.3"
regex = "1.11.1"
simplelog = "0.12.2"
strum = "0.27.1"
strum_macros = "0.27.1"
