[package]
name = "monitor-input"
version = "1.2.5"
edition = "2024"
authors = ["Koji Ishii <kojiishi@gmail.com>"]
description = "A command line tool to change input sources of display monitors with DDC/CI."
keywords = ["ddc", "mccs", "vcp", "vesa"]
repository = "https://github.com/kojiishi/monitor-input-rs"
documentation = "http://docs.rs/monitor-input"
readme = "README.md"
license = "Apache-2.0"
exclude = [".github", ".gitignore", "hooks"]
default-run = "monitor-input"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.40", features = ["derive"] }
ddc-hi = "0.4.1"
env_logger = { version = "0.11.8", optional = true }
log = "0.4.26"
mccs-db = "0.1.3"
regex = "1.11.1"
simplelog = "0.12.2"
strum = "0.27.1"
strum_macros = "0.27.1"

[target.'cfg(windows)'.dependencies]
toast-logger-win = { version = "0.5.1", optional = true }

[features]
default = ["console"]
console = ["dep:env_logger"]
winapp = ["dep:toast-logger-win"]

[[bin]]
name = "monitor-input"
required-features = ["console"]
path = "src/main.rs"

[[bin]]
name = "monitor-inputw"
required-features = ["winapp"]
path = "src/main.rs"
